# signals

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
Demo/EasyDemo/: EasyDemo.pro  anyclass.cpp  anyclass.h  main.cpp  signaldemo.cpp  signaldemo.h
example/: CMakeLists.txt
example/easy_demo/: CMakeLists.txt  main.cpp
include/signals/: signals.hpp
src/: easysignals.h
src/include/: signals.h
tests/: CMakeLists.txt  main.cpp  signalstests.cpp
